fixed z-index

--- a/less/site.less
+++ b/less/site.less
@@ -1053,6 +1053,7 @@ img {
         position: fixed;
         top: 10px;
         box-shadow: 0 0 2px 1px rgba(50,50,50,0.5);
+        z-index: 10;
     }
 }
 
