--- a/web/css/site_mod.css
+++ b/web/css/site_mod.css
@@ -1056,6 +1056,7 @@ img.pull-center:last-child {
   position: fixed;
   top: 10px;
   box-shadow: 0 0 2px 1px rgba(50, 50, 50, 0.5);
+  z-index: 10;
 }
 .footer {
   width: 1200px;
